<resources>
    <string name="app_name">Restaurant_DineIn</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_dinein">Welcome to DineIn</string>
    <string name="restaurant_dinein">Restaurant_DineIn</string>
    <string name="click_on_image_to_sign_in">Click on image to Sign In</string>
    <string name="manager">Manager</string>
    <string name="chef">Chef</string>
    <string name="admin">Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="login">Login</string>
    <string name="manage">Manage</string>
    <string name="staff_details">Staff Details</string>
    <string name="view_orders">View Orders</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="food_item_price">Food Item Price</string>
    <string name="menu_items">Menu Items</string>
    <string name="_available">Available</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_category">Item Category</string>
    <string name="add_item">Add Item</string>
    <string name="upload_item_image">Upload Item Image</string>
    <string name="categories">Categories</string>
    <string name="menu_categories">Menu Categories</string>
    <string name="food_category_name">Food Category Name</string>
    <string name="add_category">Add Category</string>
	<string name="add_table">Add Table</string>
    <string name="minimum_no_of_people">Minimum No of People</string>
    <string name="_1">1</string>
    <string name="maximum_no_of_people">Maximum No of People</string>
    <string name="_10">10</string>
    <string name="available">AVAILABLE</string>
    <string name="engaged">ENGAGED</string>
    <string name="add_table_page">Add Table Page</string>
    <string name="manage_table_page">Manage Table Page</string>
    <string name="manage_tables">Manage Tables</string>
    <string name="table_no">Table No.</string>
    <string name="tables">Tables</string>
    <string name="no_of_people">Capacity</string>
    <string name="asterisk">*</string>
    <string name="table_status">Table Status</string>
    <string name="category">Category</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_staff_member">Add Staff Member</string>
    <string name="dinein">DineIn</string>
</resources>