<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayBlack"
    tools:context="com.example.restaurant_dinein.Admin_Table_List">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTableId"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/table_no"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNoOfPeople"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/no_of_people"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTableStatus"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:text="@string/_1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>