<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.example.restaurant_dinein.Restaurant_LoginActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/login_icon"/>

        <TextView
            android:id="@+id/staff_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="26sp"
            android:paddingTop="10dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/mobile_number"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/asterisk"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textCursorDrawable="@null"
                android:background="@drawable/textview_border"/>

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:hint="@string/_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/textview_border"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <requestFocus/>

        </LinearLayout>

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_gravity="center_horizontal"
               android:text="@string/password"
               android:textColor="@color/colorPrimary"
               android:textSize="20sp"/>

           <TextView
               android:layout_marginStart="5dp"
               android:layout_marginLeft="5dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/colorAccent"
               android:textSize="20sp"
               android:textStyle="bold"
               android:text="@string/asterisk"/>

       </LinearLayout>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:imeOptions="actionDone"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/textview_border"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="textPassword" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/background_button"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_no_of_attempt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="No. of attempt Left : 3"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>