<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    tools:context="com.example.restaurant_dinein.Admin_MenuList_Adapter"
    android:background="@color/colorGrayBlack"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/foodItem_Image"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/dinein_app_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/foodItem_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/food_item_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodItem_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/food_item_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:layout_below="@+id/foodItem_Category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/foodItem_Price"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:text="@string/food_item_price"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/foodItem_available"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_toRightOf="@+id/foodItem_Price"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/_available"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>